--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1 class="w3-xlarge">No!</h1>
 			<br>
 			<h2 class="w3-xlarge">No.</h2>
-            <h1>[Go Back to studying lol.]((https://github.com/[username]/[reponame]/blob/[branch]/image.jpg?raw=true))</h1>
+            <h1>[Go Back to studying lol.](https://github.com/aniruddhxd/aniruddhxd.github.io/blob/main/okwtf.png)</h1>
 
            
 
