--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <h1 class="w3-xlarge">No!</h1>
 			<br>
 			<h2 class="w3-xlarge">No.</h2>
-            <h1>[Go Back to studying lol.](okwtf.png)</h1>
+            <h1>Go Back to studying lol.</h1>
 
            
 
-                <img src="Dev.gif" style="width:60%">
+                <img src="okwtf.png" style="width:60%">
 </div>
 
 
