--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
            
 
-                <img src="okwtf.png" style="width:60%">
+                <img src="Dev.gif" style="width:60%">
 </div>
 
 
