--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="icon" href="https://aniruddhxd.w3spaces.com/okwtf.png" />
-<title>ani Study</title>
+<title>ani you there?</title>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,10 +26,12 @@
 
         <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
 
-            <h1 class="w3-xlarge">No!</h1>
+            <h1 class="w3-xlarge">Maybe? Or maybe not.</h1>
 			<br>
-			<h2 class="w3-xlarge">No.</h2>
-            <h1>Go Back to studying lol.</h1>
+			
+            <p>Even though I might be online on discord all the time, it is ONLY because my PC is on, and most prolly I'm [afk](https://www.grammarly.com/blog/afk-meaning/)</p>
+		<br>
+		<p>As Physics and Maths exams are approaching, in aug and sep respectively and then the Big Day, i.e CLAT exam on Dec 22, my schedule is kinda packed lul. So me kinda inactive on social media hehe</p>
 
            
 
