--- a/index.html
+++ b/index.html
@@ -4,38 +4,44 @@
 
 <link rel="icon" href="https://aniruddhxd.w3spaces.com/okwtf.png" />
 <title>ani you there?</title>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <style>
     body,
     h1 {
-        font-family: "Raleway", Arial, sans-serif
+        font-family: 'Courier New', monospace;
+		text-align: center;
+		color:#C0FFEE;
     }
     h1 {
         letter-spacing: 6px
     }
     .w3-row-padding img {
-        margin-bottom: 12px
+        margin-bottom: 40px
 }
+body {
+  background-image: url('Dev.gif');
+}
+
+
 </style>
 
 <body>
 
-    <div class="w3-content" style="max-width:1500px">
+    <div class="w3-content" style="max-width:1500px" class="center">
 
         <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
 
-            <h1 class="w3-xlarge">Maybe? Or maybe not.</h1>
+		 <h1 class="w3-xlarge">Ani You There?</h1>
+            <h2 class="w3-xlarge">Maybe? Or maybe not.</h2>
 			<br>
 			
-            <p>Even though I might be online on discord all the time, it is ONLY because my PC is on, and most prolly I'm [afk](https://www.grammarly.com/blog/afk-meaning/)</p>
+            <p>Even though I might be online on discord all the time,<br>it is ONLY because my PC is on, and most prolly I'm AFK</p>
 		<br>
-		<p>As Physics and Maths exams are approaching, in aug and sep respectively and then the Big Day, i.e CLAT exam on Dec 22, my schedule is kinda packed lul. So me kinda inactive on social media hehe</p>
+		<p>As Physics and Maths exams are approaching, in aug and sep respectively and then the Big Day,<br>i.e CLAT exam on Dec 22, my schedule is kinda packed lul.<br><br> So me kinda inactive on social media hehe</p>
 
            
 
-                <img src="Dev.gif" style="width:60%">
+            
 </div>
 
 
